fix(activity): keep top-app collection API 29 compatible